package com.sar.templerunner.GameLogic;

public enum PlayerStates {
    RUNNING,
    LOW,
    HIGH
}
