@startuml uml
class Player #fec89a {
	-int pv
}
class Monster #fec89a {}
GameView --> "1" Player
GameView --> "1" Monster

abstract class Block #90e0ef {
	+void updateBlock()
    +Boolean isCollision()
}

class Road #90e0ef{
	+void updateRoad() 
	+void resetRoad()
	+void removeObstacleFromBloc(bloc : Block)
	+Boolean generateObstacle(bloc : Block)
    +void generateIntersection(bloc : Block)
    +void detectCollision(player : Player)
}


class GameView #90e0ef {
	+ void update()
    + void stopGame()
}

class Coin #90e0ef {
	+ void updateCoin()
    +Boolean isCollision()
}

class RoadBlock #90e0ef {}

class Branch #90e0ef {}

class SideRock #90e0ef {}

class SimpleRoad #90e0ef {}

class IntersectionRoad #90e0ef {}


GameView   -->  "1" Road


Road --> "*" Coin
Road  --> "*"  Block

Block <|--  RoadBlock 
Block <|--  Branch
Block <|--  SideRock
Block <|--  SimpleRoad
Block <|-- IntersectionRoad

enum PlayerStates #fec89a {
    RUNNING
    JUMPING
    SLIDING
    LEFT
    RIGHT
    PAUSE
    LOSE
    KILL
}

@enduml